crates/data-dict/tests/snapshots/validate_spec__an_unknown_language_is_rejected_structurally.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
description: Each row is a survey response.
tables:
  - name: survey
    columns:
      - name: postcode
        type: string
        examples: ["NZ-1010"]
    constraints:
      - assert: postcode IS NOT NULL
        language: perl
────────────────────────────────────────
error[Q-1-12]: A value must be one of its schema's allowed values.
  --> dict.yaml:12:19
   |
LL |         language: perl
   |                   ^^^^ Value must be one of: "data-dict", "r", got '"perl"'
   |
   = help: Check the schema for allowed values?
