crates/data-dict/tests/snapshots/validate_spec__constraints_banned_on_struct_field.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: t
    columns:
      - name: addr
        type: struct
        fields:
          - name: id
            type: number(id)
            constraints: [primary_key]
            examples: [1, 2, 3]
────────────────────────────────────────
error[Q-1-18]: An object may only contain the properties its schema defines.
  --> dict.yaml:11:13
   |
LL |             constraints: [primary_key]
   |             ^^^^^^^^^^^ Unknown property 'constraints'
   |
   = help: Check for typos in property names or remove unrecognized properties?
