crates/data-dict/tests/snapshots/validate_spec__constraints_s20_unknown_field.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: t
    columns:
      - name: addr
        type: struct
        fields:
          - name: zip
            type: string
            examples: ['97201']
    constraints:
      - assert: LENGTH(addr.zpi) = 5
────────────────────────────────────────
error[S20]: An assertion may only reference columns of its table.
  --> dict.yaml:13:24
   |
LL |   - name: t
...
LL |       - assert: LENGTH(addr.zpi) = 5
   |                        ^^^^^^^^ struct `addr` has no field `zpi`
