crates/data-dict/tests/snapshots/validate_spec__constraints_s21_filter_on_non_aggregate.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: t
    columns:
      - name: name
        type: string
        examples: [a, b]
      - name: flag
        type: boolean
    constraints:
      - assert: LENGTH(name) FILTER (WHERE flag) > 0
────────────────────────────────────────
error[S21]: An assertion must be a well-typed boolean expression.
  --> dict.yaml:12:17
   |
LL |   - name: t
...
LL |       - assert: LENGTH(name) FILTER (WHERE flag) > 0
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `FILTER` must be used with aggregate functions, and `LENGTH` isn't one
